--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,4 +3,8 @@
 	xmlns="sap.m" 
 	xmlns:mvc="sap.ui.core.mvc">
 	<Button text="Say Hello" press=".OnShowHello"/>
+	<Input value="{/recipient/name}"
+	       description="Hello {/recipient/name}"
+	       valueLiveUpdate="true"
+	       width="60%"/>
 </mvc:View>
