--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,5 +1,11 @@
-.myCustomCss .myCustomText{
+.myCustomCss .myCustomText {
 	
 	display: inline-block;
 	font-weight: bold;
+}
+.productRating {
+	padding: 0.75rem;
+}
+.productRating .sapMRI { 
+	vertical-align: initial;
 }
